objects/Coverage_Rules__mdt.object
<CustomObject>
    <fields>
        <fullName>Bodily_InjuryRange__c</fullName>
        <label>Bodily InjuryRange</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateList__c</fullName>
        <label>StateList</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uninsure_Floor_Limit__c</fullName>
        <label>Uninsure Floor Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Coverage Rules</label>
    <pluralLabel>Coverage  Rules</pluralLabel>
</CustomObject>